--- a/index.html
+++ b/index.html
@@ -447,6 +447,16 @@
     <script src="scripts/vendors/jquery.countTo.js"></script>
     <script src="scripts/main.js"></script>
 
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-SM55F9PELT"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-SM55F9PELT');
+</script>
+
 
   </body>
 </html>
